updated angular sample

--- a/samples/angular-app/src/app/app.component.html
+++ b/samples/angular-app/src/app/app.component.html
@@ -1,1 +1,5 @@
+<mgt-login (loginCompleted)="loginCompleted()"></mgt-login>
+
+<mgt-agenda group-by-day></mgt-agenda>
+
 <mgt-person [personDetails]="person" show-name></mgt-person>
