--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -8,18 +8,21 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 
-.header {
+:host .header,
+mgt-agenda .header {
   margin: var(--agenda-header-margin, 40px 10px 14px 10px);
   font-family: var(--default-font-family);
   font-size: var(--agenda-header-font-size, 24px);
   color: var(--agenda-header-color, #333333);
 }
 
-.agenda > .group:first-child > .header {
+:host .agenda > .group:first-child > .header,
+mgt-agenda .agenda > .group:first-child > .header {
   margin-top: 0;
 }
 
-.agenda-list {
+:host .agenda-list,
+mgt-agenda .agenda-list {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -28,7 +31,8 @@
   font-weight: normal;
 }
 
-.event {
+:host .event,
+mgt-agenda .event {
   background: var(--event-background, #ffffff);
   border: var(--event-border, solid 2px rgba(0, 0, 0, 0));
   box-shadow: var(--event-box-shadow, 0px 2px 8px rgba(0, 0, 0, 0.092));
@@ -37,95 +41,113 @@
   display: flex;
 }
 
-.narrow .event {
+:host .narrow .event,
+mgt-agenda .narrow .event {
   flex-direction: column;
 }
 
-.event-time-container {
+:host .event-time-container,
+mgt-agenda .event-time-container {
   display: flex;
   flex-direction: column;
   margin: 18px 38px 18px 18px;
   width: 120px;
 }
 
-.narrow .event-time-container {
+:host .narrow .event-time-container,
+mgt-agenda .narrow .event-time-container {
   margin: 14px 18px 8px 18px;
 }
 
-.event-time {
+:host .event-time,
+mgt-agenda .event-time {
   font-size: var(--event-time-font-size, 12px);
   color: var(--event-time-color, #000000);
   font-weight: 600;
 }
 
-.event-duration {
+:host .event-duration,
+mgt-agenda .event-duration {
   color: rgba(16, 16, 16, 0.3);
 }
 
-.event-details-container {
+:host .event-details-container,
+mgt-agenda .event-details-container {
   margin: 14px 18px 14px 0px;
 }
 
-.narrow .event-details-container {
+:host .narrow .event-details-container,
+mgt-agenda .narrow .event-details-container {
   margin: 0px 18px 14px 18px;
 }
 
-.event-subject {
+:host .event-subject,
+mgt-agenda .event-subject {
   margin: 0px 18px 0px 0px;
   font-size: var(--event-subject-font-size, 19px);
   color: var(--event-subject-color, #333333);
 }
 
-.event-location-container {
+:host .event-location-container,
+mgt-agenda .event-location-container {
   display: flex;
   margin: 8px 18px 0px 0px;
 }
 
-.event-location {
+:host .event-location,
+mgt-agenda .event-location {
   font-size: var(--event-location-font-size, 12px);
   color: var(--event-location-color, #000000);
   margin: 0px 0px 0px 4px;
 }
 
-.event-attendees {
+:host .event-attendees,
+mgt-agenda .event-attendees {
   --list-margin: 8px 0 0 0;
   --avatar-size-s: 20px;
 }
 
-.event-other-container {
+:host .event-other-container,
+mgt-agenda .event-other-container {
   margin: 2px 16px 4px 16px;
   margin-left: auto;
 }
 
 // loading style
 
-.loading-element {
+:host .loading-element,
+mgt-agenda .loading-element {
   background: #f2f2f2;
   border-radius: 1px;
 }
 
-.event-time-loading {
+:host .event-time-loading,
+mgt-agenda .event-time-loading {
   width: 100px;
   height: 10px;
 }
 
-.event-subject-loading {
+:host .event-subject-loading,
+mgt-agenda .event-subject-loading {
   width: 263px;
   height: 16px;
 }
 
-.event-location-icon-loading {
+:host .event-location-icon-loading,
+mgt-agenda .event-location-icon-loading {
   width: 14px;
   height: 14px;
 }
 
-.event-location-loading {
+:host .event-location-loading,
+mgt-agenda .event-location-loading {
   width: 90px;
   height: 10px;
   margin: 2px 0px 0px 4px;
 }
 
-.event-attendee-loading {
+:host .event-attendee-loading,
+mgt-agenda .event-attendee-loading {
   width: 20px;
   height: 20px;
   border-radius: 10px;
