--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -8,7 +8,8 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 
-:host {
+:host,
+mgt-login {
   --font-size: #{$ms-font-size-m};
   --font-weight: #{$ms-font-weight-semibold};
   --height: '100%';
@@ -21,12 +22,14 @@
   --popup-command-font-size: #{$ms-font-size-s};
 }
 
-.root {
+:host .root,
+mgt-login .root {
   position: relative;
   display: inline-block;
 }
 
-.login-button {
+:host .login-button,
+mgt-login .login-button {
   display: flex;
   align-items: center;
   font-family: var(--default-font-family);
@@ -56,13 +59,15 @@
   }
 }
 
-.login-icon {
+:host .login-icon,
+mgt-login .login-icon {
   & + span {
     margin-left: 6px;
   }
 }
 
-.popup {
+:host .popup,
+mgt-login .popup {
   display: none;
   position: absolute;
   animation-duration: 300ms;
@@ -82,19 +87,22 @@
   }
 }
 
-.popup-content {
+:host .popup-content,
+mgt-login .popup-content {
   display: flex;
   flex-direction: column;
   padding: 24px 48px 16px 24px;
 }
 
-.popup-commands ul {
+:host .popup-commands ul,
+mgt-login .popup-commands ul {
   list-style-type: none;
   margin: 16px 0 0;
   padding: 0;
 }
 
-.popup-command {
+:host .popup-command,
+mgt-login .popup-command {
   font-family: var(--default-font-family);
   font-size: var(--popup-command-font-size);
   font-weight: var(--font-weight);
