--- a/src/components/mgt-people/mgt-people.scss
+++ b/src/components/mgt-people/mgt-people.scss
@@ -11,17 +11,19 @@
 $list-margin: var(--list-margin, 8px 4px 8px 8px);
 $avatar-margin: var(--avatar-margin, 0 4px 0 0);
 
-.people-list {
+:host .people-list,
+mgt-people .people-list {
   list-style-type: none;
   margin: $list-margin;
   padding: 0;
-  font-family: var(--default-font-family);
+  font-family: var(--default-font-family, "Segoe UI");
   font-style: normal;
   font-weight: normal;
   display: flex;
 }
 
-.people-person {
+:host .people-person,
+mgt-people .people-person {
   margin: $avatar-margin;
   display: flex;
 }
