--- a/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
+++ b/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
@@ -5,21 +5,24 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import "../../../styles/shared-styles.scss";
-@import "../../../../node_modules/office-ui-fabric-core/dist/sass/References";
+@import '../../../styles/shared-styles.scss';
+@import '../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
-:host {
-  font-family: "Segoe UI";
+:host,
+mgt-dot-options {
+  font-family: 'Segoe UI';
 }
 
-.DotIcon {
+:host .DotIcon,
+mgt-dot-options .DotIcon {
   display: inline-block;
-  font-family: "FabricMDL2Icons";
+  font-family: 'FabricMDL2Icons';
   min-width: 30px;
   min-height: 30px;
 }
 
-.Menu {
+:host .Menu,
+mgt-dot-options .Menu {
   position: absolute;
   box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 40px 5px;
   background: #ffffff;
@@ -30,24 +33,29 @@
   transform: translateX(-50px);
 }
 
-.DotMenu.Open .Menu {
+:host .DotMenu.Open .Menu,
+mgt-dot-options .DotMenu.Open .Menu {
   display: block;
 }
 
-.DotMenu .DotItem {
+:host .DotMenu .DotItem,
+mgt-dot-options .DotMenu .DotItem {
   direction: ltr;
   text-align: left;
   padding: 10px 10px 8px 10px;
 }
 
-.DotMenu .DotItem:hover {
+:host .DotMenu .DotItem:hover,
+mgt-dot-options .DotMenu .DotItem:hover {
   background: #c0c0c0;
 }
 
-.DotMenu .DotItem:active {
+:host .DotMenu .DotItem:active,
+mgt-dot-options .DotMenu .DotItem:active {
   background: #d8d8d8;
 }
 
-.DotMenu .DotItemName {
+:host .DotMenu .DotItemName,
+mgt-dot-options .DotMenu .DotItemName {
   direction: rtl;
 }
