--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -12,14 +12,17 @@
 mgt-login {
   --font-size: #{$ms-font-size-m};
   --font-weight: #{$ms-font-weight-semibold};
+  --width: '100%';
   --height: '100%';
   --margin: 0;
   --padding: 12px 20px;
   --color: #{$ms-color-neutralDark};
   --background-color: transparent;
   --background-color--hover: #{$ms-color-neutralLight};
-  --popup-content-background-color: white;
-  --popup-command-font-size: #{$ms-font-size-s};
+  --menu-content-background-color: white;
+  --menu-command-font-size: #{$ms-font-size-s};
+  --menu-command-margin: 16px 0 0;
+  --menu-padding: 24px 48px 16px 24px;
 }
 
 :host .root,
@@ -35,6 +38,7 @@ mgt-login .login-button {
   font-family: var(--default-font-family);
   font-size: var(--font-size);
   font-weight: var(--font-weight);
+  width: var(--width);
   height: var(--height);
   margin: var(--margin);
   padding: var(--padding);
@@ -72,7 +76,7 @@ mgt-login .popup {
   position: absolute;
   animation-duration: 300ms;
   font-family: var(--default-font-family);
-  background: var(--popup-content-background-color);
+  background: var(--menu-content-background-color);
   box-shadow: 0 12px 40px 2px rgba(0, 0, 0, 0.08);
   min-width: 240px;
   z-index: 1;
@@ -91,20 +95,20 @@ mgt-login .popup {
 mgt-login .popup-content {
   display: flex;
   flex-direction: column;
-  padding: 24px 48px 16px 24px;
+  padding: var(--menu-padding);
 }
 
 :host .popup-commands ul,
 mgt-login .popup-commands ul {
   list-style-type: none;
-  margin: 16px 0 0;
+  margin: var(--menu-command-margin);
   padding: 0;
 }
 
 :host .popup-command,
 mgt-login .popup-command {
   font-family: var(--default-font-family);
-  font-size: var(--popup-command-font-size);
+  font-size: var(--menu-command-font-size);
   font-weight: var(--font-weight);
   color: var(--theme-primary-color);
   background-color: transparent;
