--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -17,6 +17,7 @@ $initials-background-color: var(--initials-background-color, #{$ms-color-magenta
 
 :host {
   box-shadow: 0px 10.6312px 13.289px rgba(180, 180, 180, 0.182), 0px 1.3289px 2.65781px rgba(68, 68, 68, 0.3);
+  border-radius: 2px;
 }
 :host .root,
 mgt-people-picker .root {
@@ -33,6 +34,8 @@ mgt-people-picker .people-picker {
 
 :host .people-list,
 mgt-people-picker .people-list {
+  box-shadow: 0px 10.6312px 13.289px rgba(180, 180, 180, 0.182), 0px 1.3289px 2.65781px rgba(68, 68, 68, 0.3);
+  border-radius: 2px;
   position: absolute;
   background-color: white;
   z-index: 1; /* Sit on top */
@@ -49,12 +52,12 @@ mgt-people-picker .people-list {
 }
 :host .people-list-separator,
 mgt-people-picker .people-list-separator {
-  text-decoration: none;
-  border-top: 2px solid #0078d4;
+  height: 2px;
+  background: #0078d4;
   margin-top: 5px;
   text-align: center;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 :host .people-chosen-input,
@@ -145,11 +148,11 @@ mgt-people-picker .input-search {
 }
 :host .input-search-start,
 mgt-people-picker .input-search-start {
-  margin: 7px 0 0 0;
+  margin: 7px 0px 0px 0px;
   line-height: normal;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 10px;
+  padding-inline-start: 14px;
 }
 
 :host .people-picker-input,
@@ -221,6 +224,8 @@ mgt-people-picker .SearchErrorIcon {
 
 :host .error-message-parent,
 mgt-people-picker .error-message-parent {
+  margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
