fixed tslint issues

--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -39,7 +39,7 @@ $email-color: var(--email-color, #{$ms-color-neutralPrimary});
     .details {
       margin-left: 14px;
 
-      .displayname {
+      .display-name {
         font-size: 27.3103px;
         // line-height: 36px;
         color: #333333dd;
