added PersonCardInteraction enum and support for both click and hover for person card in person component

--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -132,7 +132,7 @@ mgt-person .user-email {
 }
 
 .root .flyout {
-  display: inline-block;
+  display: none;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -142,5 +142,6 @@ mgt-person .user-email {
 }
 
 .root .flyout.visible {
+  display: inline-block;
   opacity: 1;
 }
