[person] updating person component to render leftside if necessary due to clientwidth

--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -144,4 +144,7 @@ mgt-person .user-email {
 .root .flyout.visible {
   display: inline-block;
   opacity: 1;
+  &.openLeft {
+    right: 0;
+  }
 }
